k8s/api-service-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.service.expose: api-service
    kompose.version: 1.17.0 (a74acad)
  creationTimestamp: null
  labels:
    io.kompose.service: api-service
  name: api-service
spec:
  replicas: 1
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: api-service
    spec:
      containers:
      - env:
        - name: AUTH_SESSION_SECRET
          valueFrom:
            configMapKeyRef:
              key: AUTH_SESSION_SECRET
              name: api-service-api-service--env
        - name: DATABASE_URL
          valueFrom:
            configMapKeyRef:
              key: DATABASE_URL
              name: api-service-api-service--env
        - name: DOCKER_BUILD
          value: "true"
        - name: DROPBOX_TOKEN
          valueFrom:
            configMapKeyRef:
              key: DROPBOX_TOKEN
              name: api-service-api-service--env
        - name: GOOGLE_OAUTH20_CLIENT_ID
          valueFrom:
            configMapKeyRef:
              key: GOOGLE_OAUTH20_CLIENT_ID
              name: api-service-api-service--env
        - name: GOOGLE_OAUTH20_CLIENT_SECRET
          valueFrom:
            configMapKeyRef:
              key: GOOGLE_OAUTH20_CLIENT_SECRET
              name: api-service-api-service--env
        - name: HOST
          valueFrom:
            configMapKeyRef:
              key: HOST
              name: api-service-api-service--env
        - name: LOG_LEVEL
          valueFrom:
            configMapKeyRef:
              key: LOG_LEVEL
              name: api-service-api-service--env
        - name: NODE_ENV
          valueFrom:
            configMapKeyRef:
              key: NODE_ENV
              name: api-service-api-service--env
        - name: PORT
          valueFrom:
            configMapKeyRef:
              key: PORT
              name: api-service-api-service--env
        - name: REDIS_HOST
          valueFrom:
            configMapKeyRef:
              key: REDIS_HOST
              name: api-service-api-service--env
        - name: REDIS_PORT
          valueFrom:
            configMapKeyRef:
              key: REDIS_PORT
              name: api-service-api-service--env
        image: arturjs/notes-app_api-service:0.0.2
        name: api-service
        ports:
        - containerPort: 3001
        resources: {}
      restartPolicy: Always
#      imagePullPollicy: Always
status: {}
