k8s/ui-service-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.service.type: LoadBalancer
    kompose.version: 1.17.0 (a74acad)
  creationTimestamp: null
  labels:
    io.kompose.service: ui-service
  name: ui-service
spec:
  replicas: 1
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: ui-service
    spec:
      containers:
      - env:
        - name: API_URL
          valueFrom:
            configMapKeyRef:
              key: API_URL
              name: ui-service-ui-service--env
        - name: AUTH_SESSION_SECRET
          valueFrom:
            configMapKeyRef:
              key: AUTH_SESSION_SECRET
              name: ui-service-ui-service--env
        - name: DOCKER_BUILD
          value: "true"
        - name: HOST
          valueFrom:
            configMapKeyRef:
              key: HOST
              name: ui-service-ui-service--env
        - name: LOG_LEVEL
          valueFrom:
            configMapKeyRef:
              key: LOG_LEVEL
              name: ui-service-ui-service--env
        - name: NODE_ENV
          valueFrom:
            configMapKeyRef:
              key: NODE_ENV
              name: ui-service-ui-service--env
        - name: PORT
          valueFrom:
            configMapKeyRef:
              key: PORT
              name: ui-service-ui-service--env
        - name: REDIS_HOST
          valueFrom:
            configMapKeyRef:
              key: REDIS_HOST
              name: ui-service-ui-service--env
        - name: REDIS_PORT
          valueFrom:
            configMapKeyRef:
              key: REDIS_PORT
              name: ui-service-ui-service--env
        image: arturjs/notes-app_ui-service:0.0.2
        name: ui-service
        ports:
        - containerPort: 3000
        resources: {}
      restartPolicy: Always
status: {}
