k8s/ui-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.service.type: LoadBalancer
    kompose.version: 1.17.0 (a74acad)
  creationTimestamp: null
  labels:
    io.kompose.service: ui-service
  name: ui-service
spec:
  ports:
  - name: "8080"
    port: 8080
    targetPort: 3000
  selector:
    io.kompose.service: ui-service
  type: LoadBalancer
status:
  loadBalancer: {}
